fixed responsive menu overflow

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,7 +22,10 @@ $container-max-widths: (
 @import "career-pages";
 
 
-
+html,body{
+  width: 100vw;
+  overflow-x: hidden;
+}
 a{
   text-decoration: none;
 }
